proj2 fix a compile error. /autograder/submission/proj2/./gitlet/Commit.java:167: error: cannot find symbol         return longSHA1.getFirst();